# Road-Sign-Detector

./: .gitignore  DATA_PROGRESS_TRACKER.md  DATA_TO_FINAL_MODEL_FLOW.md  GREENFIELD_TECHNICAL_DEVELOPMENT_PLAN.md  README.md  TECHNICAL_DEVELOPMENT_REPORT_P0_P14.md  dvc.yaml  models.dvc  params.yaml  pyproject.toml
.dvc/: config
apps/web/: eslint.config.js  (+7 more)
data/: .gitignore  annotations.dvc  official.dvc  processed.dvc  raw.dvc
docs/: ANNOTATION_GUIDE.md  ASSIGNMENT_MAPPING_AUDIT_REPORT.md  DATA_COLLECTION_PROTOCOL.md  DATA_LICENCE_POLICY.md  DATA_SOURCE_CITATION_LEDGER.md  GAP_FILL_ONLINE_MINING_HANDOFF.md  P11_TRACKING_MOTION_REPORT.md  P15_CURRENT_PUBLIC_LINK.md  P15_PHONE_CAMERA_STREAMING.md  P15_PUBLIC_TUNNEL.md  P16_OFFLINE_ADVISORY_AUDIO.md  STAGE_C_CHINA_REFERENCE_SOURCES_01_REPORT.md  STAGE_C_GAP_FILL_01_TT100K_REPORT.md  STAGE_C_GAP_FILL_02_PUBLIC_REAL_SOURCES_REPORT.md  STAGE_C_GAP_FILL_03_TO_06_RARE_CLASS_MINING_REPORT.md  STAGE_C_GENERATED_REFERENCE_POLICY.md  STAGE_C_ONLINE_REFERENCE_SOURCES_01_REPORT.md  STAGE_C_ROBOFLOW_IMPORT_REPORT.md  STAGE_C_SPRINT_01_COMMONS_TOPUP_REPORT.md  STAGE_C_SPRINT_02_SYNTHETIC_TOPUP_REPORT.md  STAGE_C_SPRINT_03_MANDATORY_DIRECTION_SYMBOLS_REPORT.md  STAGE_C_SPRINT_04_COMPOUND_MANDATORY_SYMBOLS_REPORT.md  STAGE_C_SPRINT_05_PROHIBITORY_DIRECTION_SYMBOLS_REPORT.md
scripts/: __init__.py  apply_p2_ontology_review.py  audit_assignment_mapping_evidence.py  audit_p2_ontology.py  build_p16_audio_manifest.py  build_p5_owner_crop_corrections.py  build_stage_f_negative_eval_set.py  collect_stage_c_china_reference_sources.py  collect_stage_c_gap_fill_01_commons_official.py  collect_stage_c_gap_fill_01_tt100k.py  collect_stage_c_gap_fill_02_public_real_sources.py  collect_stage_c_gap_fill_03_remaining_tt100k.py  collect_stage_c_gap_fill_04_mapillary_exact.py  collect_stage_c_gap_fill_05_prashant_tt100k_remote.py  collect_stage_c_gap_fill_06_roboflow_roadway_diverges.py  collect_stage_c_manual_01_no_straight_ahead.py  collect_stage_c_manual_01_remaining_must_gaps.py  collect_stage_c_manual_01_residential_area_ahead.py  collect_stage_c_manual_01_steep_descent.py  collect_stage_c_manual_01_stop_for_checking.py  collect_stage_c_manual_01_tractors_ahead.py  collect_stage_c_manual_01_width_restriction.py  create_phone_cert.py  download_emtd.ps1  evaluate.ps1  evaluate_stage_f_detector_profiles.py  evaluate_stage_g_classifier.py  evaluate_stage_i_final.py  export_openapi.py  fetch_emtd_subset.py  freeze_stage_e_classifier_dataset.py  generate_p16_ai_audio_assets.py  generate_p16_audio_assets.ps1  generate_post_roboflow_gap_report.py  generate_stage_ab_target_gap_report.py  generate_stage_c_sprint_02_synthetic_topup.py  generate_stage_c_sprint_03_mandatory_direction_symbols.py  generate_stage_c_sprint_04_compound_mandatory_symbols.py  generate_stage_c_sprint_05_prohibitory_direction_symbols.py  (+15 more)
(+210 files in other folders)
