[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "roadsign-assist"
version = "0.1.0"
description = "Offline Malaysian road-sign intelligence and ADAS demonstration system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Academic project - see dataset licences separately" }
authors = [
  { name = "MiniProject Team" }
]
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "joblib>=1.5,<2",
  "numpy>=2.1,<3",
  "opencv-python-headless>=4.11,<5",
  "orjson>=3.10,<4",
  "pandas>=2.2,<3",
  "pillow>=11,<13",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6.0,<7",
  "scikit-image>=0.25,<1",
  "scikit-learn>=1.6,<2",
  "scipy>=1.15,<2",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
training = [
  "albumentations>=2.0,<3",
  "matplotlib>=3.10,<4",
  "seaborn>=0.13,<1",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "ultralytics>=8.3,<9",
]
inference = [
  "onnx>=1.18,<2",
  "onnxruntime-gpu>=1.22,<2",
  "ultralytics>=8.3,<9",
]
ocr = [
  "paddleocr>=3.1,<4",
  "paddlepaddle>=3.1,<4",
]
data = [
  "dvc>=3.61,<4",
]
dev = [
  "coverage[toml]>=7.9,<8",
  "pre-commit>=4.2,<5",
  "pyright>=1.1.403,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
roadsign-assist = "roadsign_assist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roadsign_assist", "apps/api/roadsign_api"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "apps/api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["roadsign_assist", "roadsign_api"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["src", "apps/api", "tests"]
exclude = ["data", "models", "outputs", "apps/web"]
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests", "apps/api/tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
markers = [
  "model: requires optional model dependencies",
  "slow: long-running acceptance or soak test",
]

[tool.coverage.run]
branch = true
source = ["roadsign_assist", "roadsign_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
